Title, toc and imprint of OpenLayers talk

--- a/openlayers-talk/index.html
+++ b/openlayers-talk/index.html
@@ -38,8 +38,63 @@
 
     <div class="reveal">
       <div class="slides">
-        <section>Slide 1</section>
-        <section>Slide 2</section>
+        <section id="start"> <!-- data-background-size="contain" data-background-image="../shared/img/OpenLayers_logo.svg" -->
+          <h1 class="force-natural-case">OpenLayers</h1>
+          <img src="../shared/img/OpenLayers_logo.svg" class="plain" width=140>
+          <h3 class="force-natural-case">Stand, Neues und Ausblick; oder<br />"15 Punkt-Releases später… was kommt als nächstes?"</h3>
+          <p>
+            <small>Marc Jansen</small>
+          </p>
+          <p>
+            <span style="font-size: small;">FOSSGIS 2016, Salzburg, 05.07.2016</small>
+          </p>
+        </section>
+
+        <section id="toc">
+          <h2>Gliederung</h2>
+          <ul>
+            <li>…</li>
+            <li>Fazit</li>
+          </ul>
+        </section>
+
+        <section id="thanks-questions">
+          <h4>Vielen Dank</h4>
+          <hr />
+          <h1 style="font-size:3.0em">Fragen &amp; Anmerkungen?</h1>
+          <hr />
+          <p class="subtle">
+            <a href="#/imprint">Impressum</a>
+          </p>
+        </section>
+
+        <section id="imprint">
+          <h2>Impressum</h2>
+          <h4>Autor</h4>
+          <div>
+            <address style="text-align: left">
+              <strong>Marc Jansen</strong><br />
+              <span style="font-size: smaller;">
+              terrestris GmbH &amp; Co. KG<br />
+              Kölnstr. 99<br />
+              53111 Bonn<br />
+              jansen@terrestris.de
+              </span>
+            </address>
+          </div>
+          <h4 style="clear:both;">Lizenz</h4>
+          <p id="license">
+            Diese Folien sind unter <a
+            href="http://creativecommons.org/licenses/by-sa/2.0/">CC BY-SA</a>
+            veröffentlicht.
+          </p>
+          <p>
+            <a href="http://marcjansen.github.io/fossgis2016/openlayers-talk/index.html">Vortragsfolien</a>,
+            <a href="http://marcjansen.github.io/fossgis2016/openlayers-talk/slides.pdf">PDF-Version</a>,
+            <a href="https://github.com/marcjansen/fossgis2016">git repository</a>
+          </p>
+        </section>
+
       </div>
     </div>
 
