--- a/geoext3-talk/index.html
+++ b/geoext3-talk/index.html
@@ -55,9 +55,147 @@
         <section id="toc">
           <h2>Gliederung</h2>
           <ul>
-            <li>…</li>
+            <li>Über&hellip;</li>
+            <li>GeoExt: Stand</li>
+            <li>Universale Applikationen…</li>
+            <li>… mit GeoExt</li>
+            <li>Beispiel</li>
             <li>Fazit</li>
           </ul>
+        </section>
+
+        <section id="author-marc-jansen">
+          <div class="print-wrap" style="height: 500px;">
+            <h2>Marc Jansen</h2>
+            <div class="split-info">
+              <div class="part">
+                <img src="../shared/img/mj.jpg" class="plain" width="200"/><br />
+                <small>
+                  <a class="email" href="mailto:jansen@terrestris.de">jansen@terrestris.de</a><br />
+                  <a class="github" href="https://github.com/marcjansen/">@terrestris</a><br />
+                  <a class="twitter" href="https://twitter.com/selectoid/">@selectoid</a><br />
+                </small><br />
+                <img src="../shared/img/openlayers_de_1ed.png" class="plain" width=100 />
+              </div>
+              <div class="part">
+                <div class="enumeration">
+                  <ul>
+                    <li>Seit 2007 Entwickler / Projektleiter bei terrestris</li>
+                    <li>Kernentwickler und PSC Mitglied GeoExt</li>
+                    <li>Kernentwickler OpenLayers</li>
+                    <li>Buchautor "OpenLayers"</li>
+                    <li>Sprecher &amp; Trainer / national &amp; international</li>
+                    <li>OSGeo Foundation Charter Member</li>
+                  </ul>
+                </div>
+              </div>
+            </div>
+          </div>
+        </section>
+
+        <section id="about-company-terrestris">
+          <div class="print-wrap" style="height: 500px;">
+            <h2 class="force-natural-case">terrestris</h2>
+            <div class="split-info">
+              <div class="part">
+                <img src="../shared/img/terrestris-logo.png" class="plain contrast" width="200"/>
+                <br /><br />
+                <a class="github" href="https://github.com/terrestris/">@terrestris</a><br />
+                <a class="twitter" href="https://twitter.com/terrestrisde/">@terrestrisde</a>
+              </div>
+              <div class="part">
+                <div class="enumeration">
+                  <ul>
+                    <li><a href="http://terrestris.de/">terrestris.de</a></li>
+                    <li>OpenSource GIS aus Bonn</li>
+                    <li>Entwicklung, Projekte &amp; Support/Schulung</li>
+                    <li>Beratung, Planung, Implementierung &amp; Wartung</li>
+                  </ul>
+                </div>
+              </div>
+            </div>
+          </div>
+        </section>
+
+        <section id="author-christian-mayer">
+          <div class="print-wrap" style="height: 500px;">
+            <h2>Christian Mayer</h2>
+            <div class="split-info">
+              <div class="part" style="width:35%">
+                <img src="../shared/img/cm.jpg" class="plain" width="200"/><br />
+                <small>
+                  <a class="email" href="mailto:chris@meggsimum">chris@meggsimum.de</a><br />
+                  <a class="github" href="https://github.com/chrismayer/">@chrismayer</a><br />
+                  <a class="twitter" href="https://twitter.com/geofootballer/">@geofootballer</a><br />
+                </small><br />
+                <img src="../shared/img/logo-meggsimumde.jpg" class="plain" width=200 />
+              </div>
+              <div class="part"  style="width:60%">
+                <div class="enumeration">
+                  <ul>
+                    <li>Softwareentwickler &amp; -architekt</li>
+                    <li>Vornehmlich im GIS-Bereich</li>
+                    <li>Open Source Enthusiast
+                      <ul>
+                        <li>Kernentwickler GeoExt</li>
+                        <li>OpenLayers, GeoTools, uvm.</li>
+                      </ul>
+                    </li>
+                    <li>Sprecher bei nat. und internat. Konferenzen (FOSS4G, FOSSGIS, SVG Open)</li>
+                    <li>OSGeo Foundation Charter Member</li>
+                  </ul>
+                </div>
+              </div>
+            </div>
+          </div>
+        </section>
+
+        <section>
+          <h1 class="force-natural-case">GeoExt</h1>
+          <h2>Aktueller Stand</h2>
+        </section>
+
+        <section>
+          <h2 class="force-natural-case">GeoExt</h2>
+          <ul>
+            <li>JavaScript-Framework für "Rich Web Mapping Applications"</li>
+            <li>Basiert auf OpenLayers und ExtJS</li>
+            <li>Erweitert ExtJS um räumliche Komponenten</li>
+            <li>Grafische Komponenten und Daten-Paket</li>
+            <li>OpenSource, © OSGeo</li>
+            <li>Sei März 2009 (7,5 Jahre)</li>
+          </ul>
+        </section>
+
+        <section>
+          <h2>Versionen</h2>
+          <table>
+            <thead>
+              <tr>
+                <th>GeoExt</th>
+                <th>ExtJS</th>
+                <th>OpenLayers</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr>
+                <td>1.1</td>
+                <td>3.x</td>
+                <td>2.10</td>
+              </tr>
+              <tr>
+                <td>2.1</td>
+                <td>4.2.x / 5.1.x</td>
+                <td>2.13.1</td>
+              </tr>
+              <tr>
+                <td>3 (master)</td>
+                <td>6.x</td>
+                <td>3.x</td>
+              </tr>
+            </tbody>
+          </table>
+          <small></small>
         </section>
 
         <section id="thanks-questions">
