Add notes about future content of slides

--- a/geoext3-talk/index.html
+++ b/geoext3-talk/index.html
@@ -167,6 +167,10 @@
           </ul>
         </section>
 
+        <!--
+        Beispiele vor allem Desktop lastig
+        -->
+
         <section>
           <h2>Versionen</h2>
           <table>
@@ -178,17 +182,17 @@
               </tr>
             </thead>
             <tbody>
-              <tr>
+              <tr class="fragment fade-out" data-fragment-index="0">
                 <td>1.1</td>
                 <td>3.x</td>
                 <td>2.10</td>
               </tr>
-              <tr>
+              <tr class="fragment fade-out" data-fragment-index="0">
                 <td>2.1</td>
                 <td>4.2.x / 5.1.x</td>
                 <td>2.13.1</td>
               </tr>
-              <tr>
+              <tr class="fragment highlight-blue" data-fragment-index="0">
                 <td>3 (master)</td>
                 <td>6.x</td>
                 <td>3.x</td>
@@ -197,6 +201,91 @@
           </table>
           <small></small>
         </section>
+
+        <section>
+          <h2>Neuerung OpenLayers</h2>
+        </section>
+
+        <!--
+        Eine Folie
+
+        => Verweis Vorredner
+        => mobile first!
+        -->
+
+        <section>
+          <h2>Neuerung ExtJS 6</h2>
+        </section>
+
+        <!--
+        Eine Folie
+
+        => MVVC Pattern
+        => Leitet über zu universal apps
+        -->
+
+        <section>
+          <h1>Universale<br />Applikationen</h1>
+        </section>
+
+        <!--
+        Definition
+          * classic
+          * modern
+          * responsive
+          * write once / runs everywhere
+        MVVC teilweise wiederverwendbar
+        How-to: sencha
+          * app.json
+          * switch / detection
+          * multiple builds
+
+        -->
+
+        <section>
+          <h2>Universale Applikationen</h2>
+          <h1>…mit GeoExt</h1>
+        </section>
+
+        <!--
+        Was bedeutet dies für GeoExt?
+
+        * Korrekte Ableitungen
+          * Bsp. MapComponent
+          * Bsp. stores
+        * Ziel: Möglichst wenig im Wege stehen
+        -->
+
+        <section>
+          <h1>Beispiel</h1>
+        </section>
+
+        <!--
+          Hello world mit code
+            * classic
+            * modern
+          Wiederverwendung eines Controllers (click / tap handler?)
+          Modern Geolocation Button
+        -->
+
+        <section>
+          <h1>Fazit</h1>
+        </section>
+
+        <!--
+        großes Potential
+        Schwierige Dertailentwicklung
+          * sowohl für Framework
+          * als auch Applikation
+        Aktuell teilweise durch Client arbeit finanziert
+
+        Neue Folie: Grundsätzlich:
+        Mehr Kollaboration gewünscht
+        Viele ideen, wenig Zeit
+
+        Sponsoren? Entwickler?
+        -->
+
 
         <section id="thanks-questions">
           <h4>Vielen Dank</h4>
