--- a/geoext3-talk/index.html
+++ b/geoext3-talk/index.html
@@ -68,7 +68,7 @@
           <div class="print-wrap" style="height: 500px;">
             <h2>Marc Jansen</h2>
             <div class="split-info">
-              <div class="part">
+              <div class="part" style="width:35%">
                 <img src="../shared/img/mj.jpg" class="plain" width="200"/><br />
                 <small>
                   <a class="email" href="mailto:jansen@terrestris.de">jansen@terrestris.de</a><br />
@@ -77,14 +77,14 @@
                 </small><br />
                 <img src="../shared/img/openlayers_de_1ed.png" class="plain" width=100 />
               </div>
-              <div class="part">
+              <div class="part" style="width:60%">
                 <div class="enumeration">
                   <ul>
                     <li>Seit 2007 Entwickler / Projektleiter bei terrestris</li>
                     <li>Kernentwickler und PSC Mitglied GeoExt</li>
                     <li>Kernentwickler OpenLayers</li>
                     <li>Buchautor "OpenLayers"</li>
-                    <li>Sprecher &amp; Trainer / national &amp; international</li>
+                    <li>Sprecher &amp; Trainer <br /> national &amp; international</li>
                     <li>OSGeo Foundation Charter Member</li>
                   </ul>
                 </div>
@@ -97,13 +97,13 @@
           <div class="print-wrap" style="height: 500px;">
             <h2 class="force-natural-case">terrestris</h2>
             <div class="split-info">
-              <div class="part">
+              <div class="part" style="width:35%">
                 <img src="../shared/img/terrestris-logo.png" class="plain contrast" width="200"/>
                 <br /><br />
                 <a class="github" href="https://github.com/terrestris/">@terrestris</a><br />
                 <a class="twitter" href="https://twitter.com/terrestrisde/">@terrestrisde</a>
               </div>
-              <div class="part">
+              <div class="part" style="width:60%">
                 <div class="enumeration">
                   <ul>
                     <li><a href="http://terrestris.de/">terrestris.de</a></li>
