GeoExt talk mostly done

--- a/geoext3-talk/index.html
+++ b/geoext3-talk/index.html
@@ -35,15 +35,16 @@
   <body>
 
 
+<!-- BEGIN OF SLIDES -->
 
 
     <div class="reveal">
       <div class="slides">
 
         <section id="start">
-          <h1 class="force-natural-case">GeoExt3</h1>
+          <h1>GeoExt3</h1>
           <img src="../shared/img/geoext-logo.png" class="plain" width=140>
-          <h3 class="force-natural-case">Universale WebGIS Applikationen<br />mit OpenLayers 3 und ExtJS6</h3>
+          <h3>Universale WebGIS Applikationen<br />mit OpenLayers 3 und ExtJS6</h3>
           <p>
             <small>Marc Jansen &amp; Christian Mayer</small>
           </p>
@@ -65,98 +66,95 @@
         </section>
 
         <section id="author-marc-jansen">
-          <div class="print-wrap" style="height: 500px;">
-            <h2>Marc Jansen</h2>
-            <div class="split-info">
-              <div class="part" style="width:35%">
-                <img src="../shared/img/mj.jpg" class="plain" width="200"/><br />
-                <small>
-                  <a class="email" href="mailto:jansen@terrestris.de">jansen@terrestris.de</a><br />
-                  <a class="github" href="https://github.com/marcjansen/">@terrestris</a><br />
-                  <a class="twitter" href="https://twitter.com/selectoid/">@selectoid</a><br />
-                </small><br />
-                <img src="../shared/img/openlayers_de_1ed.png" class="plain" width=100 />
-              </div>
-              <div class="part" style="width:60%">
-                <div class="enumeration">
-                  <ul>
-                    <li>Seit 2007 Entwickler / Projektleiter bei terrestris</li>
-                    <li>Kernentwickler und PSC Mitglied GeoExt</li>
-                    <li>Kernentwickler OpenLayers</li>
-                    <li>Buchautor "OpenLayers"</li>
-                    <li>Sprecher &amp; Trainer <br /> national &amp; international</li>
-                    <li>OSGeo Foundation Charter Member</li>
-                  </ul>
-                </div>
+          <h2>Marc Jansen</h2>
+          <div class="split-info">
+            <div class="part" style="width:35%">
+              <img src="../shared/img/mj.jpg" class="plain" width="200"/><br />
+              <small>
+                <a class="email" href="mailto:jansen@terrestris.de">jansen@terrestris.de</a><br />
+                <a class="github" href="https://github.com/marcjansen/">@terrestris</a><br />
+                <a class="twitter" href="https://twitter.com/selectoid/">@selectoid</a><br />
+              </small><br />
+              <img src="../shared/img/openlayers_de_1ed.png" class="plain" width=100 />
+            </div>
+            <div class="part" style="width:60%">
+              <div class="enumeration">
+                <ul>
+                  <li>Seit 2007 Entwickler / Projektleiter bei terrestris</li>
+                  <li>Kernentwickler und PSC Mitglied GeoExt</li>
+                  <li>Kernentwickler OpenLayers</li>
+                  <li>Buchautor "OpenLayers"</li>
+                  <li>Sprecher &amp; Trainer <br /> national &amp; international</li>
+                  <li>OSGeo Foundation Charter Member</li>
+                </ul>
               </div>
             </div>
           </div>
+          <div style="clear:both"></div>
         </section>
 
         <section id="about-company-terrestris">
-          <div class="print-wrap" style="height: 500px;">
-            <h2 class="force-natural-case">terrestris</h2>
-            <div class="split-info">
-              <div class="part" style="width:35%">
-                <img src="../shared/img/terrestris-logo.png" class="plain contrast" width="200"/>
-                <br /><br />
-                <a class="github" href="https://github.com/terrestris/">@terrestris</a><br />
-                <a class="twitter" href="https://twitter.com/terrestrisde/">@terrestrisde</a>
-              </div>
-              <div class="part" style="width:60%">
-                <div class="enumeration">
-                  <ul>
-                    <li><a href="http://terrestris.de/">terrestris.de</a></li>
-                    <li>OpenSource GIS aus Bonn</li>
-                    <li>Entwicklung, Projekte &amp; Support/Schulung</li>
-                    <li>Beratung, Planung, Implementierung &amp; Wartung</li>
-                  </ul>
-                </div>
+          <h2>terrestris</h2>
+          <div class="split-info">
+            <div class="part" style="width:35%">
+              <img src="../shared/img/terrestris-logo.png" class="plain" width="200"/>
+              <br /><br />
+              <a class="github" href="https://github.com/terrestris/">@terrestris</a><br />
+              <a class="twitter" href="https://twitter.com/terrestrisde/">@terrestrisde</a>
+            </div>
+            <div class="part" style="width:60%">
+              <div class="enumeration">
+                <ul>
+                  <li><a href="http://terrestris.de/">terrestris.de</a></li>
+                  <li>OpenSource GIS aus Bonn</li>
+                  <li>Entwicklung, Projekte &amp; Support/Schulung</li>
+                  <li>Beratung, Planung, Implementierung &amp; Wartung</li>
+                </ul>
               </div>
             </div>
           </div>
+          <div style="clear:both"></div>
         </section>
 
         <section id="author-christian-mayer">
-          <div class="print-wrap" style="height: 500px;">
-            <h2>Christian Mayer</h2>
-            <div class="split-info">
-              <div class="part" style="width:35%">
-                <img src="../shared/img/cm.jpg" class="plain" width="200"/><br />
-                <small>
-                  <a class="email" href="mailto:chris@meggsimum">chris@meggsimum.de</a><br />
-                  <a class="github" href="https://github.com/chrismayer/">@chrismayer</a><br />
-                  <a class="twitter" href="https://twitter.com/geofootballer/">@geofootballer</a><br />
-                </small><br />
-                <img src="../shared/img/logo-meggsimumde.jpg" class="plain" width=200 />
-              </div>
-              <div class="part"  style="width:60%">
-                <div class="enumeration">
-                  <ul>
-                    <li>Softwareentwickler &amp; -architekt</li>
-                    <li>Vornehmlich im GIS-Bereich</li>
-                    <li>Open Source Enthusiast
-                      <ul>
-                        <li>Kernentwickler GeoExt</li>
-                        <li>OpenLayers, GeoTools, uvm.</li>
-                      </ul>
-                    </li>
-                    <li>Sprecher bei nat. und internat. Konferenzen (FOSS4G, FOSSGIS, SVG Open)</li>
-                    <li>OSGeo Foundation Charter Member</li>
-                  </ul>
-                </div>
+          <h2>Christian Mayer</h2>
+          <div class="split-info">
+            <div class="part" style="width:35%">
+              <img src="../shared/img/cm.jpg" class="plain" width="200"/><br />
+              <small>
+                <a class="email" href="mailto:chris@meggsimum">chris@meggsimum.de</a><br />
+                <a class="github" href="https://github.com/chrismayer/">@chrismayer</a><br />
+                <a class="twitter" href="https://twitter.com/geofootballer/">@geofootballer</a><br />
+              </small><br />
+              <img src="../shared/img/logo-meggsimumde.jpg" class="plain" width=200 />
+            </div>
+            <div class="part"  style="width:60%">
+              <div class="enumeration">
+                <ul>
+                  <li>Softwareentwickler &amp; -architekt</li>
+                  <li>Vornehmlich im GIS-Bereich</li>
+                  <li>Open Source Enthusiast
+                    <ul>
+                      <li>Kernentwickler GeoExt</li>
+                      <li>OpenLayers, GeoTools, uvm.</li>
+                    </ul>
+                  </li>
+                  <li>Sprecher bei nat. und internat. Konferenzen (FOSS4G, FOSSGIS, SVG Open)</li>
+                  <li>OSGeo Foundation Charter Member</li>
+                </ul>
               </div>
             </div>
           </div>
+          <div style="clear:both"></div>
         </section>
 
         <section>
-          <h1 class="force-natural-case">GeoExt</h1>
+          <h1>GeoExt</h1>
           <h2>Aktueller Stand</h2>
         </section>
 
         <section>
-          <h2 class="force-natural-case">GeoExt</h2>
+          <h2>GeoExt</h2>
           <ul>
             <li>JavaScript-Framework für "Rich Web Mapping Applications"</li>
             <li>Basiert auf OpenLayers und ExtJS</li>
@@ -167,9 +165,11 @@
           </ul>
         </section>
 
-        <!--
-        Beispiele vor allem Desktop lastig
-        -->
+        <section
+          data-background-image="img/desktop-complex-composed.png"
+          data-background-size="80% auto">
+          <p>&nbsp;</p>
+        </section>
 
         <section>
           <h2>Versionen</h2>
@@ -182,17 +182,17 @@
               </tr>
             </thead>
             <tbody>
-              <tr class="fragment fade-out" data-fragment-index="0">
+              <tr>
                 <td>1.1</td>
                 <td>3.x</td>
                 <td>2.10</td>
               </tr>
-              <tr class="fragment fade-out" data-fragment-index="0">
+              <tr>
                 <td>2.1</td>
                 <td>4.2.x / 5.1.x</td>
                 <td>2.13.1</td>
               </tr>
-              <tr class="fragment highlight-blue" data-fragment-index="0">
+              <tr class="fragment highlight-blue">
                 <td>3 (master)</td>
                 <td>6.x</td>
                 <td>3.x</td>
@@ -227,15 +227,17 @@
         <section
           data-background-image="img/ol-desktop-composed.png"
           data-background-size="80% auto">
+          <p>&nbsp;</p>
         </section>
 
         <section
           data-background-image="img/ol-iphone6-composed.png"
           data-background-size="90% auto">
+          <p>&nbsp;</p>
         </section>
 
         <section>
-          <h1>…universal.</h1>
+          <h2>…universal.</h2>
         </section>
 
         <section>
@@ -256,19 +258,21 @@
         <section
           data-background-image="img/desktop-classic-admin-dashboard-composed.png"
           data-background-size="80% auto">
+          <p>&nbsp;</p>
         </section>
 
         <section
           data-background-image="img/iphone6-modern-admin-dashboard-composed.png"
           data-background-size="90% auto">
+          <p>&nbsp;</p>
         </section>
 
         <section>
-          <h1>…universal.</h1>
+          <h2>…universal.</h2>
         </section>
 
         <section>
-          <h1>Universale<br />Applikationen</h1>
+          <h2>Universale<br />Applikationen</h2>
         </section>
 
         <section>
@@ -296,7 +300,7 @@
         </section>
 
         <section>
-          <h2 class="force-natural-case">app.json &amp; sencha</h2>
+          <h2>app.json &amp; sencha</h2>
           <pre><code data-trim contenteditable>
 "builds": {
     "classic": {
@@ -318,10 +322,11 @@ $ sencha app build modern
         <section
           data-background-image="img/folder-structure.png"
           data-background-size="auto 90%">
+          <p>&nbsp;</p>
         </section>
 
         <section>
-          <h2 class="force-natural-case">Profildetektion in index.html</h2>
+          <h2>Profildetektion in index.html</h2>
           <pre><code data-trim>
 Ext.beforeLoad = function (tags) {
     var s = location.search,  // the query string (ex "?foo=1&bar")
@@ -379,28 +384,41 @@ Ext.beforeLoad = function (tags) {
           <h1>Beispiel</h1>
         </section>
 
-        <!--
-        zwei screenies BfS
-        -->
-
-        <section>
-          <h1>Fazit</h1>
+        <section
+          data-background-image="img/desktop-bfs-composed.png"
+          data-background-size="80% auto">
+          <p>&nbsp;</p>
         </section>
 
-        <!--
-        großes Potential
-        Schwierige Dertailentwicklung
-          * sowohl für Framework
-          * als auch Applikation
-        Aktuell teilweise durch Client arbeit finanziert
+        <section
+          data-background-image="img/iphone6-bfs-composed.png"
+          data-background-size="auto 90%">
+          <p>&nbsp;</p>
+        </section>
 
-        Neue Folie: Grundsätzlich:
-        Mehr Kollaboration gewünscht
-        Viele ideen, wenig Zeit
+        <section
+          data-background-image="img/mobiletree-composed.png"
+          data-background-size="90% auto">
+          <p>&nbsp;</p>
+        </section>
 
-        Sponsoren? Entwickler?
-        -->
+        <section>
+          <h2>Fazit</h2>
+        </section>
 
+        <section>
+          <h2>Fazit</h2>
+          <ul>
+            <li>Großes Potential</li>
+            <li>Anspruchsvolle Detailentwicklung (Framework / App)</li>
+            <li>Einige unerwartete Fallstricke</li>
+            <li>Ansprechende Ergebnisse</li>
+            <li>Derzeit Verbesserungen finanziert (BfS)<br /></li>
+            <li>Mehr Kollaboration gewünscht</li>
+            <li>Viele Ideen / wenig Zeit</li>
+            <li>Sponsoren? Entwickler?</li>
+          </ul>
+        </section>
 
         <section id="thanks-questions">
           <h4>Vielen Dank</h4>
@@ -444,8 +462,8 @@ Ext.beforeLoad = function (tags) {
             veröffentlicht.
           </p>
           <p>
-            <a href="http://marcjansen.github.io/fossgis2016/geoext3-talk/index.html">Vortragsfolien</a>,
-            <a href="http://marcjansen.github.io/fossgis2016/geoext3-talk/slides.pdf">PDF-Version</a>,
+            <a href="https://rawgit.com/marcjansen/fossgis2016/master/geoext3-talk/index.html">Vortragsfolien</a>,
+            <a href="https://rawgit.com/marcjansen/fossgis2016/master/geoext3-talk/GeoExt3-Universale-WebGIS-Applikationen-mit-OpenLayers-3-und-ExtJS6.pdf">PDF-Version</a>,
             <a href="https://github.com/marcjansen/fossgis2016">git repository</a>
           </p>
         </section>
@@ -453,6 +471,8 @@ Ext.beforeLoad = function (tags) {
       </div>
     </div>
 
+
+<!-- END OF SLIDES -->
 
 
     <script src="../shared/lib/reveal.js-3.3.0/lib/js/head.min.js"></script>
