Adapt slides with infos on CM / meggsimum

--- a/geoext3-talk/index.html
+++ b/geoext3-talk/index.html
@@ -126,21 +126,40 @@
                 <a class="github" href="https://github.com/chrismayer/">@chrismayer</a><br />
                 <a class="twitter" href="https://twitter.com/geofootballer/">@geofootballer</a><br />
               </small><br />
-              <img src="../shared/img/logo-meggsimumde.jpg" class="plain" width=200 />
             </div>
             <div class="part"  style="width:60%">
               <div class="enumeration">
                 <ul>
+                  <li>Geoinformatiker</li>
                   <li>Softwareentwickler &amp; -architekt</li>
-                  <li>Vornehmlich im GIS-Bereich</li>
-                  <li>Open Source Enthusiast
-                    <ul>
-                      <li>Kernentwickler GeoExt</li>
-                      <li>OpenLayers, GeoTools, uvm.</li>
-                    </ul>
-                  </li>
-                  <li>Sprecher bei nat. und internat. Konferenzen (FOSS4G, FOSSGIS, SVG Open)</li>
+                  <li>Kernentwickler und PSC Mitglied GeoExt</li>
+                  <li>Sprecher &amp; Trainer <br /> national &amp; international</li>
                   <li>OSGeo Foundation Charter Member</li>
+                </ul>
+              </div>
+            </div>
+          </div>
+          <div style="clear:both"></div>
+        </section>
+
+        <section id="about-company-meggsimum">
+          <h2>meggsimum</h2>
+          <div class="split-info">
+            <div class="part" style="width:35%">
+              <img src="../shared/img/meggsimum-logo.png" class="plain" width="200"/>
+              <br /><br />
+              <a class="github" href="https://github.com/meggsimum/">@meggsimum</a><br />
+              <a class="twitter" href="https://twitter.com/meggsimum/">@meggsimum</a>
+            </div>
+            <div class="part" style="width:60%">
+              <div class="enumeration">
+                <ul>
+                  <li><a href="http://meggsimum.de/">meggsimum.de</a></li>
+                  <li>Dienstleistungen im Bereich GIS, Webmapping &amp; GDI</li>
+                  <li>Maßgeschneiderte WebGIS-Lösungen</li>
+                  <li>Softwarekonzepte und Softwareentwicklung</li>
+                  <li>Geodaten</li>
+                  <li>Beratung und Schulung</li>
                 </ul>
               </div>
             </div>
@@ -448,7 +467,7 @@ Ext.beforeLoad = function (tags) {
             <address style="text-align: right">
               <strong>Christian Mayer</strong><br />
               <span style="font-size: smaller;">
-              meggsimum.de<br />
+              meggsimum<br />
               Hauptstraße 165a<br />
               67125 Dannstadt-Schauernheim<br />
               chris@meggsimum.de
