--- a/geoext3-talk/index.html
+++ b/geoext3-talk/index.html
@@ -268,7 +268,7 @@
           <ul>
             <li>Toolkits classic &amp; modern</li>
             <li>Build profiles</li>
-            <li>Besseres Themeing (fashion)</li>
+            <li>Besseres Theming (fashion)</li>
             <li>Model-View-Controller &amp; Model-View-ViewModel</li>
             <li><code>Ext.Widget</code> … <code>Ext.list.Tree</code> </li>
           </ul>
@@ -376,7 +376,7 @@ Ext.beforeLoad = function (tags) {
           <ul>
             <li>Korrekte Ableitungen in eigenen Klassen</li>
             <li>Bsp. <code>GeoExt.component.Map</code></li>
-            <li>Wiederverendbar: alles außer <code>GeoExt.grid.column.Symbolizer</code></li>
+            <li>Wiederverwendbar: alles außer <code>GeoExt.grid.column.Symbolizer</code></li>
             <li>components, data-package (models und stores), utilities &amp; mixins</li>
             <li>tree-Strukturen via models</li>
           </ul>
