Basic structure ol3 talk

--- a/openlayers-talk/index.html
+++ b/openlayers-talk/index.html
@@ -34,6 +34,7 @@
   <body>
 
 
+<!-- BEGIN OF SLIDES -->
 
 
     <div class="reveal">
@@ -53,9 +54,127 @@
         <section id="toc">
           <h2>Gliederung</h2>
           <ul>
-            <li>…</li>
+            <li>Über…</li>
+            <li>Stand</li>
+            <li>Neues (15 Punkt-Releases)</li>
+            <li>Ausblick</li>
             <li>Fazit</li>
           </ul>
+        </section>
+
+        <section>
+          <h1>Über…</h1>
+        </section>
+
+        <section id="author-marc-jansen">
+          <h2>Marc Jansen</h2>
+          <div class="split-info">
+            <div class="part" style="width:35%">
+              <img src="../shared/img/mj.jpg" class="plain" width="200"/><br />
+              <small>
+                <a class="email" href="mailto:jansen@terrestris.de">jansen@terrestris.de</a><br />
+                <a class="github" href="https://github.com/marcjansen/">@terrestris</a><br />
+                <a class="twitter" href="https://twitter.com/selectoid/">@selectoid</a><br />
+              </small><br />
+              <img src="../shared/img/openlayers_de_1ed.png" class="plain" width=100 />
+            </div>
+            <div class="part" style="width:60%">
+              <div class="enumeration">
+                <ul>
+                  <li>Seit 2007 Entwickler / Projektleiter bei terrestris</li>
+                  <li>Kernentwickler und PSC Mitglied GeoExt</li>
+                  <li>Kernentwickler OpenLayers</li>
+                  <li>Buchautor "OpenLayers"</li>
+                  <li>Sprecher &amp; Trainer <br /> national &amp; international</li>
+                  <li>OSGeo Foundation Charter Member</li>
+                </ul>
+              </div>
+            </div>
+          </div>
+          <div style="clear:both"></div>
+        </section>
+
+        <section id="about-company-terrestris">
+          <h2>terrestris</h2>
+          <div class="split-info">
+            <div class="part" style="width:35%">
+              <img src="../shared/img/terrestris-logo.png" class="plain" width="200"/>
+              <br /><br />
+              <a class="github" href="https://github.com/terrestris/">@terrestris</a><br />
+              <a class="twitter" href="https://twitter.com/terrestrisde/">@terrestrisde</a>
+            </div>
+            <div class="part" style="width:60%">
+              <div class="enumeration">
+                <ul>
+                  <li><a href="http://terrestris.de/">terrestris.de</a></li>
+                  <li>OpenSource GIS aus Bonn</li>
+                  <li>Entwicklung, Projekte &amp; Support/Schulung</li>
+                  <li>Beratung, Planung, Implementierung &amp; Wartung</li>
+                </ul>
+              </div>
+            </div>
+          </div>
+          <div style="clear:both"></div>
+        </section>
+
+        <section>
+          <h1>Stand</h1>
+        </section>
+
+        <section>
+          <h2>Was ist OpenLayers?</h2>
+          <blockquote>
+            A high-performance, feature-packed library for all your mapping
+            needs.
+            <footer>&mdash; <cite><a href="http://openlayers.org/">openlayers.org, 27. Juni 2016</a></cite></footer>
+          </blockquote>
+          <ul class="fragment">
+            <li>OpenSource (BSD)</li>
+            <li>JavaScript</li>
+            <li>OSGeo project</li>
+          </ul>
+        </section>
+
+        <section>
+          <h2>OpenLayers</h2>
+          <ul>
+            <li>…lange Historie<ul>
+              <li>v2.0.0, August 2006</li>
+              <li>v3.0.0, August 2014</li>
+              <li>v3.16.0, Mai 2016</li>
+            </ul></li>
+            <li>viele Daten- &amp; Layerquellen</li>
+            <li>Interaktionen &amp; Steuerelemente</li>
+            <li>Aktiv entwickelt &amp; große Community</li>
+            <li>Gut dokumentiert &amp; viele Beispiele</li>
+            <li>Universal einsetzbar</li>
+          </ul>
+        </section>
+
+        <section
+          data-background-image="img/basic.png"
+          data-background-size="contain">
+          <p>&nbsp;</p>
+        </section>
+
+        <section
+          data-background-image="img/portals.png"
+          data-background-size="contain">
+          <p>&nbsp;</p>
+        </section>
+
+        <section>
+          <h1>Neues</h1>
+          <h2>15 Punkt-Releases später</h2>
+        </section>
+
+        <section>
+          <h1>Ausblick</h1>
+          <h2>… was kommt als nächstes?</h2>
+        </section>
+
+        <section>
+          <h1>Fazit</h1>
         </section>
 
         <section id="thanks-questions">
