--- a/openlayers-talk/index.html
+++ b/openlayers-talk/index.html
@@ -167,7 +167,10 @@
           <h1>Neues</h1>
           <h2>15 Punkt-Releases später</h2>
         </section>
-
+        <section>
+          <h2>OpenLayers</h2>
+        <p>https://github.com/openlayers/ol3/compare/master@%7B2015-03-11%7D...master@%7B2016-07-15%7D</p>
+      </section>
         <section>
           <h1>Ausblick</h1>
           <h2>… was kommt als nächstes?</h2>
